# python-lib-template-demo

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
tests/: test_python_lib_template_demo.py
