[project]
name = "python-lib-template-demo"
version = "0.1"
description = "Demonstrating https://github.com/simonw/python-lib"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [

]

[project.urls]
Homepage = "https://github.com/simonw/python-lib-template-demo"
Changelog = "https://github.com/simonw/python-lib-template-demo/releases"
Issues = "https://github.com/simonw/python-lib-template-demo/issues"
CI = "https://github.com/simonw/python-lib-template-demo/actions"


[project.optional-dependencies]
test = ["pytest"]
